# kerka-api

./: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
src/: lib.rs  qrcode.rs
src/endpoints/: qrcode.rs
